--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ $(document).ready(function() {
 		<div class="principal">
 			<h1>Noticias varias</h1>
 			<ul id="noticias">
-			<li><a href="generales.html">Noticias Generales</a></li>
+			<li><a href="generales.html">Noticias Generales Generales</a></li>
     <li><a href="deportivas.html">Noticias Deportivas</a></li>
     <li><a href="tiempo.html">Noticias del Tiempo</a></li>
 			</ul>
