--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	border: 1px solid white;	
 }
 </style>
-<script src="../Jquery/Jquery-3.7.1.min.js"></script>
+<script src="Jquery/Jquery-3.7.1.min.js"></script>
 <script>
 
 $(document).ready(function() {
